<resources>
    <string name="app_name">Space Trader</string>
    <string name="travelBtnStr">Travel</string>
    <string name="marketBtnStr">Market</string>
    <string name="shipyardBtnStr">Shipyard</string>
    <string name="playerBtnStr">Player Info</string>
    <string name="debugBtnStr">Debug Info</string>
    <string name="newgame">NEW GAME</string>
    <string name="loadgame">LOAD GAME</string>
    <string name="savegame">SAVE GAME</string>
    <string name="selection">Please Select/Save Your Game Below!</string>
    <string name="haley">Haley</string>
    <string name="Drake">Drake</string>
    <string name="Rohan">Rohan</string>
    <string name="loadsave">LOAD/SAVE GAME</string>
    <string name="title_activity_google_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

</resources>
