<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.SelectionActivity"
        android:background="@drawable/planet">

    <Button
            android:text="@string/newgame"
            android:layout_width="159dp"
            android:layout_height="86dp"
            android:id="@+id/newgame"
            android:background="@android:color/darker_gray" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="126dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="300dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="126dp" android:layout_marginBottom="97dp"
            app:layout_constraintBottom_toTopOf="@+id/loadgame"
            android:onClick="configurePlayer"

    />
    <Button
            android:text="@string/loadgame"
            android:layout_width="159dp"
            android:layout_height="86dp"
            android:id="@+id/loadgame"
            android:background="@android:color/darker_gray" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="126dp" android:layout_marginTop="97dp"
            app:layout_constraintTop_toBottomOf="@+id/newgame" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="126dp" android:layout_marginBottom="281dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="loadScreen"/>
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="152dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="176dp"
            android:layout_marginBottom="100dp" app:layout_constraintBottom_toTopOf="@+id/newgame"
            android:textColor="@android:color/darker_gray"
            android:textSize="50sp"/>
</android.support.constraint.ConstraintLayout>