<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/gameview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.GameFragment">
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/imageView"
            android:src="@drawable/planet" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/travelButton"/>
    <Button
            android:text="@string/travelBtnStr"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:id="@+id/travelButton"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textSize="24sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/market_button"/>
    <Button
            android:text="@string/marketBtnStr"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:id="@+id/market_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/travelButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button3"/>
    <Button
            android:text="@string/shipyardBtnStr"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:id="@+id/button3"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/market_button" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button4"/>
    <Button
            android:text="@string/playerBtnStr"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:id="@+id/button4"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textSize="24sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button3" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="Planet Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            android:textColor="@android:color/white" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView" android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent"
    />
</android.support.constraint.ConstraintLayout>
